--- a/publish-deploy/PodTemplate.yml
+++ b/publish-deploy/PodTemplate.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 spec:
   containers:
-  -   name: node-container
+  -   name: cfoundry
       image: mrllus2cbacr.azurecr.io/merrillcorporation/cloudbees-ephemeral-agents:deploy-0.3
       tty: true
       command:
