--- a/jenkins-node/PodTemplate.yml
+++ b/jenkins-node/PodTemplate.yml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Pod
 spec:
   containers:
-  -   name: node-container
-      image: # mrllus2cbacr.azurecr.io/merrillcorporation/cloudbees-ephemeral-agents:atlassian-node-jfrog
+  -   name: cfoundry
+      image: mrllus2cbacr.azurecr.io/merrillcorporation/cloudbees-ephemeral-agents:atlassian-node-jfrog
       tty: true
       command:
       - cat
