--- a/ruby-node/Dockerfile
+++ b/ruby-node/Dockerfile
@@ -1,1 +1,25 @@
-FROM ruby:2.6-alpine3.9
+FROM ruby:2.5
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    apt-transport-https \
+    ca-certificates \
+    bash \
+    curl \
+    netbase \
+    wget \
+    vim \
+    git \
+    jq \
+    tar \
+    gzip \
+    gnupg \
+    dirmngr \
+    locales \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN sed -i -e 's/# en-US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
+    dpkg-reconfigure --frontend=noninteractive locales && \
+    update-local LANG=en_US.UTF-8
+
+ENV LANG en_US.UTF-8
+ENV LC_ALL en_US.UTF-8
