--- a/ruby-node/PodTemplate.yml
+++ b/ruby-node/PodTemplate.yml
@@ -5,6 +5,13 @@ spec:
   - name: ruby-node
     image: mrllus2cbacr.azurecr.io/merrillcorporation/cloudbees-ephemeral-agents:ruby-node
     tty: true
+    resources:
+      limits:
+        cpu: "1"
+        memory: "6Gi"
+      requests:
+        cpu: "0.5"
+        memory: "1Gi"
     command:
     - cat
   imagePullSecrets:
