--- a/api-smoke-testing/PodTemplate.yml
+++ b/api-smoke-testing/PodTemplate.yml
@@ -4,6 +4,13 @@ spec:
   containers:
   -   name: javelin-common
       image: mrllus2cbacr.azurecr.io/merrillcorporation/cloudbees-ephemeral-agents:api-smoke-testing-1.0
+      resources:
+        limits:
+          cpu: "1"
+          memory: "6Gi"
+        requests:
+          cpu: "0.5"
+          memory: "1Gi"
       tty: true
       command:
       - cat
