--- a/atlassian-node/PodTemplate.yml
+++ b/atlassian-node/PodTemplate.yml
@@ -4,6 +4,13 @@ spec:
   containers:
   -   name: node-container
       image: mrllus2cbacr.azurecr.io/merrillcorporation/cloudbees-ephemeral-agents:atlassian-node-jfrog
+      resources:
+        limits:
+          cpu: "1"
+          memory: "6Gi"
+        requests:
+          cpu: "0.5"
+          memory: "1Gi"
       tty: true
       command:
       - cat
