--- a/publish-deploy/openjdk-11/PodTemplate.yml
+++ b/publish-deploy/openjdk-11/PodTemplate.yml
@@ -4,6 +4,13 @@ spec:
   containers:
   -   name: cfoundry
       image: mrllus2cbacr.azurecr.io/merrillcorporation/cloudbees-ephemeral-agents:deploy-0.4
+      resources:
+        limits:
+          cpu: "1"
+          memory: "6Gi"
+        requests:
+          cpu: "0.5"
+          memory: "1Gi"
       tty: true
       command:
       - cat
