--- a/common-lib/openjdk-11/Dockerfile
+++ b/common-lib/openjdk-11/Dockerfile
@@ -11,8 +11,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     gnupg \
     dirmngr \
-    mongodb \
     && rm -rf /var/lib/apt/lists/*
+
+# hacks to install Mongodb 4
+RUN apt update && \
+    apt-key apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4 \
+    echo "deb http://repo.mongodb.org/apt/debian stretch/mongodb-org/4.0 main" | tee /etc/apt/sources.list.d/mongodb-org.list && \
+    echo "deb http://deb.debian.org/debian/ stretch main" | tee /etc/apt/sources.list.d/debian-stretch.list && \
+    apt-get update && apt-get install -y --no-install-recommends mongodb-org && \
+    rm -rf /var/lib/apt/lists/*
+
+# set up Gradle
 RUN groupadd --system --gid 1000 gradle && \
     useradd --system --create-home --uid 1000 --gid gradle --groups audio,video --shell /bin/bash gradle && \
     mkdir --parents /home/gradle/reports && \
