--- a/library-pipeline/openjdk-11/PodTemplate.yml
+++ b/library-pipeline/openjdk-11/PodTemplate.yml
@@ -5,7 +5,7 @@ kind: Pod
 spec:
   containers:
   -   name: javelin-common
-      image: mrllus2cbacr.azurecr.io/merrillcorporation/cloudbees-ephemeral-agents:mongo-jdk11
+      image: mrllus2cbacr.azurecr.io/merrillcorporation/cloudbees-ephemeral-agents:common-lib-jdk11
       resources:
         limits:
           cpu: "1"
