Adding zip and unzip to publish-deploy JDK11 container

--- a/publish-deploy/openjdk-11/Dockerfile
+++ b/publish-deploy/openjdk-11/Dockerfile
@@ -15,6 +15,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     jq \
     tar \
+    zip \
+    unzip \
     gzip \
     gnupg \
     dirmngr \
