--- a/sup1-ruby-node/Dockerfile
+++ b/sup1-ruby-node/Dockerfile
@@ -23,7 +23,7 @@ RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
     dpkg-reconfigure --frontend=noninteractive locales && \
     update-locale LANG=en_US.UTF-8
 
-# Install latest chrome dev package.
+# Install latest chrome dev package following https://github.com/GoogleChromeLabs/lighthousebot/blob/master/builder/Dockerfile
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
     && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
     && apt-get update \
