Update the Readme to explain how to fix the CLI autoscaler plugin URL.

--- a/ssh-agents/publish-deploy-jdk11/Dockerfile
+++ b/ssh-agents/publish-deploy-jdk11/Dockerfile
@@ -42,7 +42,7 @@ RUN sed -i /etc/ssh/sshd_config \
 VOLUME "${JENKINS_AGENT_HOME}" "/tmp" "/run" "/var/run"
 WORKDIR "${JENKINS_AGENT_HOME}"
 
-COPY setup-sshd.sh /usr/local/bin/setup-sshd
+COPY setup-sshd /usr/local/bin/setup-sshd
 
 # install jFrog CLI
 RUN curl -fL https://getcli.jfrog.io | sh \
@@ -57,6 +57,7 @@ RUN curl -L "https://cli.run.pivotal.io/stable?release=linux64-binary&source=git
     && mv cf /usr/local/bin
 
 # install the plugins for Autoscaler & B/G Deployer
+# NOTE: If the build errors out, you may need to update the URL to a more recent version of the Autoscaler plugin!
 RUN curl -O -fL -X GET https://network.pivotal.io/api/v2/products/pcf-app-autoscaler/releases/280907/product_files/292914/download -H "Authorization: Bearer $token" \
     && cf install-plugin -f download
 
