Getting cf autoscaler plugins installed (#28)
* Getting cf autoscaler plugins installed

* Removing copy plugin command

Co-authored-by: jross <jordan.ross@merrillcorp.com>

--- a/ssh-agents/publish-deploy-jdk11/Dockerfile
+++ b/ssh-agents/publish-deploy-jdk11/Dockerfile
@@ -10,8 +10,8 @@ ARG JENKINS_AGENT_HOME=/home/${user}
 ENV JENKINS_AGENT_HOME ${JENKINS_AGENT_HOME}
 ENV JENKINS_SLAVE_SSH_PUBKEY ${JENKINS_SLAVE_SSH_PUBKEY}
 
-RUN groupadd -g ${gid} ${group} \
-    && useradd -d "${JENKINS_AGENT_HOME}" -u "${uid}" -g "${gid}" -m -s /bin/bash "${user}"
+RUN groupadd -g ${gid} ${group} && \
+    useradd -d "${JENKINS_AGENT_HOME}" -u "${uid}" -g "${gid}" -m -s /bin/bash "${user}"
 
 # setup SSH server
 RUN apt-get update \
@@ -24,6 +24,7 @@ RUN apt-get update \
     wget \
     vim \
     git \
+    sudo \
     jq \
     tar \
     gzip \
@@ -40,15 +41,11 @@ RUN sed -i /etc/ssh/sshd_config \
         -e 's/#LogLevel.*/LogLevel INFO/' && \
     mkdir /var/run/sshd
 
-VOLUME "${JENKINS_AGENT_HOME}" "/tmp" "/run" "/var/run"
+VOLUME "/tmp" "/run" "/var/run"
 WORKDIR "${JENKINS_AGENT_HOME}"
 
 COPY setup-sshd /usr/local/bin/setup-sshd
 RUN chmod 755 /usr/local/bin/setup-sshd
-
-COPY app-autoscaler-plugin /home/jenkins
-COPY install-autoscaler.sh /home/jenkins
-RUN chmod 775 /home/jenkins/install-autoscaler.sh
 
 # install jFrog CLI
 RUN curl -fL https://getcli.jfrog.io | sh \
@@ -56,14 +53,13 @@ RUN curl -fL https://getcli.jfrog.io | sh \
     && chmod +x /usr/local/bin/jfrog
 
 # install CF CLI
-RUN wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | apt-key add - \
-     && echo "deb https://packages.cloudfoundry.org/debian stable main" | tee /etc/apt/sources.list.d/cloudfoundry-cli.list \
-     && apt-get update && apt-get install cf-cli && apt-get install cf7-cli
+RUN wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | apt-key add - && \
+    echo "deb https://packages.cloudfoundry.org/debian stable main" | tee /etc/apt/sources.list.d/cloudfoundry-cli.list && \
+    apt-get update && sudo apt-get install cf-cli && apt-get install cf7-cli && \
+    curl -O -fL -X GET https://network.pivotal.io/api/v2/products/pcf-app-autoscaler/releases/280907/product_files/292914/download -H "Authorization: Bearer $token" && \
+    su - jenkins -c 'cf install-plugin -f download && cf install-plugin -f app-autoscaler-plugin'
 
-# install the plugins for Autoscaler & B/G Deployer
-# NOTE: If the build errors out, you may need to update the URL to a more recent version of the Autoscaler plugin!
-RUN curl -O -fL -X GET https://network.pivotal.io/api/v2/products/pcf-app-autoscaler/releases/280907/product_files/292914/download -H "Authorization: Bearer $token" \
-    && cf install-plugin -f download
+VOLUME ${JENKINS_AGENT_HOME}
 
 EXPOSE 22
 
