updating publish-deploy-jdk8 image

--- a/ssh-agents/publish-deploy-jdk8/Dockerfile
+++ b/ssh-agents/publish-deploy-jdk8/Dockerfile
@@ -1,11 +1,22 @@
-FROM jenkinsci/ssh-slave
+FROM openjdk:8-jdk
 
 ARG token
+ARG user=jenkins
+ARG group=jenkins
+ARG uid=1000
+ARG gid=1000
+ARG JENKINS_AGENT_HOME=/home/${user}
 
-USER root
+ENV JENKINS_AGENT_HOME ${JENKINS_AGENT_HOME}
+ENV JENKINS_SLAVE_SSH_PUBKEY ${JENKINS_SLAVE_SSH_PUBKEY}
 
-# install build tools
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN groupadd -g ${gid} ${group} && \
+    useradd -d "${JENKINS_AGENT_HOME}" -u "${uid}" -g "${gid}" -m -s /bin/bash "${user}"
+
+# setup SSH server
+RUN apt-get update \
+    && apt-get install --no-install-recommends -y \
+    openssh-server \
     apt-transport-https \
     ca-certificates \
     curl \
@@ -13,13 +24,28 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     wget \
     vim \
     git \
+    sudo \
     jq \
     tar \
-    unzip \
     gzip \
+    unzip \
     gnupg \
     dirmngr \
     && rm -rf /var/lib/apt/lists/*
+
+RUN sed -i /etc/ssh/sshd_config \
+        -e 's/#PermitRootLogin.*/PermitRootLogin no/' \
+        -e 's/#RSAAuthentication.*/RSAAuthentication yes/'  \
+        -e 's/#PasswordAuthentication.*/PasswordAuthentication no/' \
+        -e 's/#SyslogFacility.*/SyslogFacility AUTH/' \
+        -e 's/#LogLevel.*/LogLevel INFO/' && \
+    mkdir /var/run/ssh
+
+VOLUME "/tmp" "/run" "/var/run"
+WORKDIR "${JENKINS_AGENT_HOME}"
+
+COPY setup-sshd /usr/local/bin/setup-sshd
+RUN chmod 755 /usr/local/bin/setup-sshd
 
 # install jFrog CLI
 RUN curl -fL https://getcli.jfrog.io | sh \
@@ -27,16 +53,14 @@ RUN curl -fL https://getcli.jfrog.io | sh \
     && chmod +x /usr/local/bin/jfrog
 
 # install CF CLI
-# RUN wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | apt-key add - \
-#     && echo "deb https://packages.cloudfoundry.org/debian stable main" | tee /etc/apt/sources.list.d/cloudfoundry-cli.list \
-#     && apt-get update && apt-get install cf-cli
-RUN curl -L "https://cli.run.pivotal.io/stable?release=linux64-binary&source=github" | tar -zx \
-    && mv cf /usr/local/bin
+RUN wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | apt-key add - && \
+    echo "deb https://packages.cloudfoundry.org/debian stable main" | tee /etc/apt/sources.list.d/cloudfoundry-cli.list && \
+    apt-get update && sudo apt-get install cf-cli && apt-get install cf7-cli && \
+    curl -O -fL -X GET https://network.pivotal.io/api/v2/products/pcf-app-autoscaler/releases/280907/product_files/292914/download -H "Authorization: Bearer $token" && \
+    su - jenkins -c 'cf install-plugin -f download && cf install-plugin -f app-autoscaler-plugin'
 
-# install the plugins for Autoscaler & B/G Deployer
-RUN curl -O -fL -X GET https://network.pivotal.io/api/v2/products/pcf-app-autoscaler/releases/280907/product_files/292914/download -H "Authorization: Bearer $token" \
-    && cf install-plugin -f download
+VOLUME "${JENKINS_AGENT_HOME}"
 
 EXPOSE 22
 
-ENTRYPOINT ["setup-sshd"]
+ENTRYPOINT ["/usr/local/bin/setup-sshd"]
